# Major_Project_ARIVAI

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: app.py
client/src/: index.css
client/src/components/: CycleCalendar.tsx  Navigation.tsx  PhaseCard.tsx  SymptomLogger.tsx
client/src/hooks/: useAuth.ts
client/src/lib/: authUtils.ts  cycleUtils.ts
client/src/pages/: Chat.tsx  Landing.tsx  Onboarding.tsx  Profile.tsx  Recipes.tsx
server/: storage.ts
shared/: schema.ts
version2/: .env.example  README.md  package.json
version2/backend/: app.py
version2/client/src/: App.tsx  index.css
version2/client/src/components/: CycleCalendar.tsx  PhaseCard.tsx
version2/client/src/lib/: cycleUtils.ts  queryClient.ts
version2/client/src/pages/: Dashboard.tsx  Education.tsx  Landing.tsx  Meditation.tsx
version2/server/: gemini.ts  routes.ts
version2/shared/: schema.ts
